# splatting_sandbox

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  LICENSE  README.md
src/: App.cpp  App.h  ImGuiLayer.cpp  ImGuiLayer.h  ImageLayer.cpp  ImageLayer.h  LayerBase.h  Renderer.cpp  Renderer.h  TriangleLayer.cpp  TriangleLayer.h  VulkanErrors.cpp  VulkanErrors.h  VulkanHandles.cpp  VulkanHandles.h  VulkanShaders.cpp  VulkanShaders.h  main.cpp
src/shaders/: image.frag  image.vert  triangle.frag  triangle.vert
